// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="23"
  bbWidth="22"
  focusable={false}
  height="23"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 23,
      "opacity": 1,
      "width": 22,
    }
  }
  vbHeight={23}
  vbWidth={22}
  width="22"
/>
`;

exports[`2. iconfacebook sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 25,
    }
  }
/>
`;

exports[`3. iconforwardarrow sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 58.333333333333336,
      "width": 29.166666666666668,
    }
  }
/>
`;

exports[`4. iconstar sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`5. iconcopylink sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 15,
      "width": 15,
    }
  }
/>
`;

exports[`6. iconsavebookmark sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 16,
      "width": 12,
    }
  }
/>
`;

exports[`7. icontwitter sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 62.5,
    }
  }
/>
`;

exports[`8. iconvideo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 85,
    }
  }
/>
`;

exports[`9. iconvideo360player sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 54,
    }
  }
/>
`;

exports[`10. thestlogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 34.48275862068965,
      "width": 50,
    }
  }
/>
`;

exports[`11. thetimeslogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`12. closeicon sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 28,
      "width": 28,
    }
  }
/>
`;
